[package]
name = "wolframalpha_api"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/u296/wolframalpha_api"
license = "BSD 1-Clause License"
license-file = "LICENSE"
keywords = ["api", "wolframalpha"]
categories = ["api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["fs"]}
reqwest = "*"
image = "*"