[package]
name = "wolframalpha_api"
version = "0.1.0"
authors = ["u296"]
edition = "2021"
rust-version = "1.59.0"
description = "very primitive api bindings for the wolfram alpha api"
readme = "README.md"
repository = "https://github.com/u296/wolframalpha_api"
license = "0BSD"
keywords = ["api", "wolframalpha"]
categories = ["api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["fs"]}
reqwest = "0.11"
image = "0.24"