[package]
name = "wolframalpha_api"
version = "0.7.0"
authors = ["u296"]
edition = "2021"
rust-version = "1.56.0"
description = "very primitive api bindings for the wolfram alpha api"
readme = "README.md"
repository = "https://github.com/u296/wolframalpha_api"
license = "0BSD"
keywords = ["api", "wolframalpha"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["fs"]}
reqwest = "0.11"
image = {version = "0.24", optional = true}
bytes = "1.1"
serde_json = "1"
serde = {version = "1", features = ["derive"]}